add user detail and fix some bugs
